# schoenberg

./: .gitignore  CMakeLists.txt  README.md  clean.sh  default.nix  dev.nix  flake.nix  udevmon.yaml
src/: CMakeLists.txt  main.cpp  schoenberg.cpp  schoenberg.h  utils.h
tst/: CMakeLists.txt  config-test.cpp  layer-test.cpp  process-test.cpp  test.json  test.yaml  test_utils.h
